# algotrader

./: .gitignore  pyproject.toml
algotrader/: utils.py
algotrader/dataset/: base_dataset.py  pandas_dataset.py
algotrader/trade/: stock_trade.py  strategy.py  trade.py
tests/: test_pandas_dataset.py  test_stock_trader.py
