[tool.poetry]
name = "algotrader"
version = "0.1.0"
description = "A simple stocktrading library."
authors = ["Ashrit Yarava <ashdragon95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
